--- a/styles/variables.css
+++ b/styles/variables.css
@@ -34,6 +34,8 @@
 
   --header-size: 60px;
 
+  --button-height: 60px;
+
   --padding-size-00: 0.25rem; /* 4px */
   --padding-size-01: 0.5rem; /* 8px */
   --padding-size-02: 1.25rem; /* 20px */
